--- a/src/App.module.css
+++ b/src/App.module.css
@@ -52,6 +52,8 @@
   font-size: 16px;
   color: #A0A0A0;
   margin-bottom: 10px;
+  text-decoration: none !important;
+  border: none !important;
 }
 
 .profileInfo .position {
