--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,11 @@
+body {
+  overflow: hidden;
+  overflow-y: hidden;
+  /*для вертикального*/
+  overflow-x: hidden;
+  /*для горизонтального*/
+}
+
 .App {
   margin: 0;
   font-family: Arial, sans-serif;
