--- a/static/styles/app.css
+++ b/static/styles/app.css
@@ -1,3 +1,4 @@
+html,
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
@@ -5,7 +6,7 @@ body {
     'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color: #1E1E1E;
+    background: #1E1E1E url("https://s3.dvorfs.com/horvitz-site/background.png") no-repeat center/cover;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -29,7 +30,6 @@ body {
 .app {
     margin: 0;
     font-family: Arial, sans-serif;
-    background-color: var(--bg-color);
     display: flex;
     flex-direction: column; /* Stack children vertically */
     justify-content: center;
