--- a/static/styles/app.css
+++ b/static/styles/app.css
@@ -17,10 +17,12 @@ body {
 :root {
     --bg-color: #1E1E1E;
     --card-bg: #2A2A2A;
-    --text-color: #E0E0E0;
-    --primary-color: #FFFFFF;
+    --text-color: #FFFFFF;
+    --primary-color: #E0E0E0;
     --secondary-color: #A0A0A0;
     --accent-color: #4A4A4A;
+    --button-color: #363636;
+    --hover-button-color: #4A4A4A;
     --hover-scale: 1.05;
     --transition-speed: 0.4s;
     --border-radius: 14px;
@@ -122,7 +124,7 @@ body {
     position: absolute;
     top: 20px;
     right: 20px;
-    background-color: var(--card-bg);
+    background-color: var(--button-color);
     color: var(--text-color);
     border: none;
     border-radius: 8px;
@@ -135,11 +137,7 @@ body {
 }
 
 #lang-select:hover {
-    background-color: var(--accent-color);
-}
-
-#lang-select:focus {
-    background-color: var(--accent-color);
+    background-color: var(--hover-button-color);
 }
 
 #lang-select option {
@@ -170,7 +168,7 @@ body {
     display: inline-block;
     padding: 10px 20px;
     color: var(--text-color);
-    background-color: var(--accent-color);
+    background-color: var(--button-color);
     text-decoration: none;
     border-radius: 8px;
     transition: all var(--transition-speed) ease;
@@ -179,7 +177,7 @@ body {
 }
 
 .documentation a:hover {
-    background-color: var(--secondary-color);
+    background-color: var(--hover-button-color);
     transform: scale(var(--hover-scale));
 }
 
